using System;
using System.Collections;
using System.Collections.Generic;
using UnityEngine;
using UnityEngine.InputSystem;

public static class AnimationStrings
{
    public static string IsMoving = "IsMoving";
    public static string attack1 = "attack1";
    public static string attack2 = "attack2";
    public static string canMove = "canMove";
}